--- a/src/components/chat/styles.css
+++ b/src/components/chat/styles.css
@@ -1,4 +1,5 @@
 #chat{
+    position: relative;
     background: #262E35;
     height: 100vh;
     display: flex;
@@ -20,4 +21,82 @@
     color: #fff;
     font-size: 3rem;
     width: 60%;
+}
+
+#chat .session-on header{
+    position: absolute;
+    width: 100%;
+    height: 7rem;
+    border-bottom: 1px solid #fff;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    padding-left: 1rem;
+}
+
+#chat .session-on header label {
+    background: #fff;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#chat .session-on header label img{
+    width: 3rem;
+}
+
+#chat .session-on header span{
+   font-size: 2rem;
+   color: #fff;
+   margin-left: 1rem;
+}
+
+#chat .session-on body {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 8rem;
+    border-top: 1px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+ }
+
+ #chat .session-on body input{
+    width: 100%;
+    height: 5rem;
+    background: #36404A;
+    border: none;
+    outline: none;
+    padding-left: 1rem;
+    color: #A6B0CF;
+    border-radius: 1rem;
+ }
+
+#chat .session-on body button {
+    cursor: pointer;
+    background: #6159CB;
+    color: #fff;
+    font-size: 3rem;
+    width: 5rem;
+    height: 5rem;
+    border: none;
+    margin-left: 1rem;
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 2ms;
+}
+
+#chat .session-on body button:hover {
+    opacity: 0.9;
 }
