add api comunication

--- a/src/components/chat/styles.css
+++ b/src/components/chat/styles.css
@@ -1,3 +1,12 @@
+@keyframes pop{
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
 #chat{
     position: relative;
     background: #262E35;
@@ -57,7 +66,7 @@
    margin-left: 1rem;
 }
 
-#chat .session-on body {
+#chat .session-on footer form{
     position: absolute;
     left: 0;
     bottom: 0;
@@ -70,7 +79,7 @@
     padding: 2rem;
  }
 
- #chat .session-on body input{
+ #chat .session-on footer form input{
     width: 100%;
     height: 5rem;
     background: #36404A;
@@ -81,7 +90,7 @@
     border-radius: 1rem;
  }
 
-#chat .session-on body button {
+#chat .session-on footer form button {
     cursor: pointer;
     background: #6159CB;
     color: #fff;
@@ -97,6 +106,47 @@
     transition: opacity 2ms;
 }
 
-#chat .session-on body button:hover {
+#chat .session-on footer button:hover {
     opacity: 0.9;
+}
+
+#chat .session-on .chat-content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  grid-gap: 8px;
+  overflow: auto;
+
+  animation: pop .25s ease;
+}
+
+#chat .session-on .chat-content .outgoing {
+    justify-content: flex-end;
+}
+
+.outgoing,
+.incoming {
+    margin-bottom: 8px;
+    gap: 8px;
+}
+
+.outgoing,
+.incoming span {
+    padding: 8px;
+    font-size: 18px;
+    border-radius: 7px;
+    box-shadow: 0 3px 6px rgba(0,0,0,.10);
+}
+
+.outgoing {
+    flex-direction: row-reverse;
+}
+.outgoing span{     
+    background-color: #36404A;
+    color: #ffffff;
+}
+
+.incoming span { 
+    background-color: #6159CB;
+    color: #ffffff;
 }
