--- a/src/components/chat/styles.css
+++ b/src/components/chat/styles.css
@@ -8,13 +8,12 @@
 }
 
 #chat{
+    width: 100%;
     position: relative;
     background: #262E35;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 #chat .session-off{
@@ -39,7 +38,7 @@
     border-bottom: 1px solid #fff;
     top: 0;
     left: 0;
-
+    
     display: flex;
     align-items: center;
     padding-left: 1rem;
@@ -50,7 +49,7 @@
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,9 +60,9 @@
 }
 
 #chat .session-on header span{
-   font-size: 2rem;
-   color: #fff;
-   margin-left: 1rem;
+    font-size: 2rem;
+    color: #fff;
+    margin-left: 1rem;
 }
 
 #chat .session-on footer form{
@@ -77,9 +76,9 @@
     justify-content: center;
     align-items: center;
     padding: 2rem;
- }
+}
 
- #chat .session-on footer form input{
+#chat .session-on footer form input{
     width: 100%;
     height: 5rem;
     background: #36404A;
@@ -88,7 +87,7 @@
     padding-left: 1rem;
     color: #A6B0CF;
     border-radius: 1rem;
- }
+}
 
 #chat .session-on footer form button {
     cursor: pointer;
@@ -111,13 +110,15 @@
 }
 
 #chat .session-on .chat-content{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  grid-gap: 8px;
-  overflow: auto;
-
-  animation: pop .25s ease;
+    margin-left: 5%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 8px;
+    overflow: auto;
+    position: absolute;
+    bottom: 8rem;
+    animation: pop .25s ease;
 }
 
 #chat .session-on .chat-content .outgoing {
@@ -132,15 +133,13 @@
 
 .outgoing,
 .incoming span {
+    display: flex;
     padding: 8px;
-    font-size: 18px;
+    font-size: 12px;
     border-radius: 7px;
     box-shadow: 0 3px 6px rgba(0,0,0,.10);
 }
 
-.outgoing {
-    flex-direction: row-reverse;
-}
 .outgoing span{     
     background-color: #36404A;
     color: #ffffff;
@@ -149,4 +148,13 @@
 .incoming span { 
     background-color: #6159CB;
     color: #ffffff;
+}
+
+@media(min-width: 700px){
+    .outgoing,
+    .incoming span {
+    font-size: 2rem;
+    border-radius: 7px;
+    box-shadow: 0 3px 6px rgba(0,0,0,.10);
+}
 }
